--- a/sections/0_abstract.tex
+++ b/sections/0_abstract.tex
@@ -1,6 +1,6 @@
 \chapter*{Abstract}
 
-There's a ever further growing worry about the quantity of information that's generated and received by multiple institutions. Not only related to the excessive ammount of paper consumed, but as well as the management of such big quantities of information.
+There's a ever growing worry about the quantity of information that's generated and received by multiple institutions. Not only related to the excessive ammount of paper consumed, but as well as the management of such big quantities of information.
 
 With the purpose of simplifying the process of managing such documents, the portuguese government has been developing various strategies. Namely, in the Public Administration, with directives provided by the European Comission.
 
