Quase final? enviado para o ramalho

--- a/sections/3_solucao.tex
+++ b/sections/3_solucao.tex
@@ -130,7 +130,7 @@ Para tal, a solução encontrada foi a implementação de duas funções de midd
 \end{figure}
 
 \cleardoublepage
-\section{Gestão de utilizadores}
+\section{Gestão de utilizadores} \label{gestaoUtilizadoresSolucao}
 
 \subsection{Especificação}
 De modo a fornecer uma solução para a gestão de utilizadores, foi sugerida a criação e implementação de uma página que correspondesse a um painel de gestão de utilizadores.
@@ -162,7 +162,7 @@ Além das funcionalidades previamente descritas, este painel de gestão terá de
 \end{figure}
 
 \cleardoublepage
-\section{Métrica da plataforma}
+\section{Métrica da plataforma} \label{solucaoMetrica}
 \vspace{-4mm}
 \subsection{Especificação}
 \vspace{-3mm}
